<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AbrirOcorrenciaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/b_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/white"
            android:contentDescription="@string/descricao_botao_fechar"
            app:srcCompat="@drawable/close" />

        <TextView
            android:id="@+id/tv_acao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titulo_abrir_ocorrencia"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocorrencia_descreva"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:contentDescription="@string/ocorrencia_descreva"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="3000"
            android:maxLines="6"
            android:minLines="6"
            android:paddingVertical="2dp"
            android:singleLine="false"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_selecione_equipamento"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginStart="5dp"
                android:background="@drawable/rounded_inline_button"
                android:padding="4dp"
                app:srcCompat="@drawable/round_qr_code_scanner_24" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>